# cppCMakeTest

./: CMakeLists.txt  cppCMakeTest.ioc
Core/Inc/: stm32l0xx_hal_conf.h  stm32l0xx_it.h
Core/Src/: freertos.cpp  gpio.cpp  main.cpp  syscalls.cpp  tim.cpp
cmake/: g++-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
